// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorNotice should display custom post type view label 1`] = `
<GlobalNoticesContainer>
  <Localized(Notice)
    showDismiss={true}
    status="is-success"
    text="View Project"
  />
</GlobalNoticesContainer>
`;

exports[`EditorNotice should display publish success for custom post type 1`] = `
<GlobalNoticesContainer>
  <Localized(Notice)
    showDismiss={true}
    status="is-success"
    text={
      Array [
        "jetpack-testimonial published on ",
        <a
          onClick={[Function]}
        >
          Example Site
        </a>,
        "!",
      ]
    }
  />
</GlobalNoticesContainer>
`;

exports[`EditorNotice should display publish success for page 1`] = `
<GlobalNoticesContainer>
  <Localized(Notice)
    showDismiss={true}
    status="is-success"
    text={
      Array [
        "Page published on ",
        <a
          onClick={[Function]}
        >
          Example Site
        </a>,
        "! ",
        <a
          href="/page/example.wordpress.com"
          onClick={[Function]}
        >
          Add another page
        </a>,
      ]
    }
  />
</GlobalNoticesContainer>
`;

exports[`EditorNotice should display publish success for post 1`] = `
<GlobalNoticesContainer>
  <Localized(Notice)
    showDismiss={true}
    status="is-success"
    text={
      Array [
        "Post published on ",
        <a
          onClick={[Function]}
        >
          Example Site
        </a>,
        "! ",
        <a
          href="/post/example.wordpress.com"
          onClick={[Function]}
        >
          Add another post
        </a>,
      ]
    }
  />
</GlobalNoticesContainer>
`;
